--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,4 @@
 	path = sourcedata/smriprep
 	url = /home/bpinsard/projects/rrg-pbellec/datasets/cneuromod_processed/fmriprep/retinotopy/../../smriprep/
 	datalad-id = f3ef9683-0a58-4d2b-b4eb-d33d8fc3fd2b
+	datalad-url = ../../smriprep/
