[DATALAD] modified subdataset properties

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,4 @@
 	path = sourcedata/retinotopy
 	url = /project/rrg-pbellec/ria-beluga/alias/cneuromod_raw/retinotopy
 	datalad-id = df96e39c-55e0-4862-a5c4-66145afcff6a
+	datalad-url = "ria+file:///project/rrg-pbellec/ria-beluga#~cneuromod_raw/retinotopy"
