--- a/.gitmodules
+++ b/.gitmodules
@@ -12,3 +12,7 @@
 	path = sourcedata/templateflow
 	url = /home/bpinsard/projects/rrg-pbellec/datasets/cneuromod_processed/fmriprep/retinotopy/../harrypotter/sourcedata/templateflow/
 	datalad-id = c79c47b6-d0fb-11e8-aa11-64006a8a730f
+[submodule "containers"]
+	path = containers
+	url = /home/bpinsard/projects/rrg-pbellec/datasets/cneuromod_processed/fmriprep/retinotopy/../harrypotter/containers/
+	datalad-id = b02e63c2-62c1-11e9-82b0-52540040489c
