--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,4 @@
 	path = containers
 	url = /home/bpinsard/projects/rrg-pbellec/datasets/cneuromod_processed/fmriprep/retinotopy/../harrypotter/containers/
 	datalad-id = b02e63c2-62c1-11e9-82b0-52540040489c
+	datalad-url = ../harrypotter/containers/
