--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,8 @@
 	url = /home/bpinsard/projects/rrg-pbellec/datasets/cneuromod_processed/fmriprep/retinotopy/../harrypotter/containers/
 	datalad-id = b02e63c2-62c1-11e9-82b0-52540040489c
 	datalad-url = ../harrypotter/containers/
+[submodule "sourcedata/templateflow"]
+	path = sourcedata/templateflow
+	url = /project/rrg-pbellec/ria-beluga/alias/templateflow
+	datalad-id = c79c47b6-d0fb-11e8-aa11-64006a8a730f
+	datalad-url = "ria+file:///project/rrg-pbellec/ria-beluga#~templateflow"
