--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,8 @@
 [submodule "sourcedata/smriprep"]
 	path = sourcedata/smriprep
-	url = /home/bpinsard/projects/rrg-pbellec/datasets/cneuromod_processed/fmriprep/retinotopy/../../smriprep/
+	url = /project/rrg-pbellec/ria-beluga/alias/cneuromod.anat.smriprep
 	datalad-id = f3ef9683-0a58-4d2b-b4eb-d33d8fc3fd2b
-	datalad-url = ../../smriprep/
+	datalad-url = "ria+file:///project/rrg-pbellec/ria-beluga#~cneuromod.anat.smriprep"
 [submodule "sourcedata/retinotopy"]
 	path = sourcedata/retinotopy
 	url = /project/rrg-pbellec/ria-beluga/alias/cneuromod_raw/retinotopy
@@ -10,10 +10,11 @@
 	datalad-url = "ria+file:///project/rrg-pbellec/ria-beluga#~cneuromod_raw/retinotopy"
 [submodule "sourcedata/templateflow"]
 	path = sourcedata/templateflow
-	url = /home/bpinsard/projects/rrg-pbellec/datasets/cneuromod_processed/fmriprep/retinotopy/../harrypotter/sourcedata/templateflow/
+	url = /project/rrg-pbellec/ria-beluga/alias/templateflow
 	datalad-id = c79c47b6-d0fb-11e8-aa11-64006a8a730f
+	datalad-url = "ria+file:///project/rrg-pbellec/ria-beluga#~templateflow"
 [submodule "containers"]
 	path = containers
-	url = /home/bpinsard/projects/rrg-pbellec/datasets/cneuromod_processed/fmriprep/retinotopy/../harrypotter/containers/
+	url = /project/rrg-pbellec/ria-beluga/alias/repronim/containers/
 	datalad-id = b02e63c2-62c1-11e9-82b0-52540040489c
-	datalad-url = ../harrypotter/containers/
+	datalad-url = "ria+file:///project/rrg-pbellec/ria-beluga#~repronim/containers"
