[DATALAD] Added subdataset

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,8 @@
 	url = /project/rrg-pbellec/ria-beluga/alias/repronim/containers/
 	datalad-id = b02e63c2-62c1-11e9-82b0-52540040489c
 	datalad-url = "ria+file:///project/rrg-pbellec/ria-beluga#~repronim/containers"
+[submodule "sourcedata/retinotopy"]
+	path = sourcedata/retinotopy
+	url = git@github.com:courtois-neuromod/retinotopy.git
+	datalad-id = df96e39c-55e0-4862-a5c4-66145afcff6a
+	datalad-url = git@github.com:courtois-neuromod/retinotopy.git
