--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
 name: Test deploy
 on:
   push:
-    branches: [ main, git-annex, tests, with_slicetiming]
+    branches: [ main, git-annex, with_slicetiming]
   pull_request:
     branches: [ main ]
   workflow_dispatch:
@@ -15,3 +15,4 @@ jobs:
       ssh_key: ${{ github.event.repository.private && secrets.CNEUROMOD_BOT_SSH_KEY || secrets.CNEUROMOD_USER_BOT_SSH_KEY }}
       s3_access_key: ${{ secrets.CNEUROMOD_BOT_S3_ACCESS_KEY }}
       s3_secret_key: ${{ secrets.CNEUROMOD_BOT_S3_SECRET_KEY }}
+      git_token: ${{ github.event.repository.private && secrets.CNEUROMOD_BOT_TOKEN || '' }} 
