--- a/.gitmodules
+++ b/.gitmodules
@@ -2,17 +2,17 @@
 	path = sourcedata/smriprep
 	url = git@github.com:courtois-neuromod/anat.smriprep.git
 	datalad-id = f3ef9683-0a58-4d2b-b4eb-d33d8fc3fd2b
-	datalad-url = git@github.com:courtois-neuromod/containers.git
+	datalad-url = https://github.com/courtois-neuromod/containers.git
 [submodule "sourcedata/retinotopy"]
 	path = sourcedata/retinotopy
 	url = git@github.com:courtois-neuromod/retinotopy.git
 	datalad-id = df96e39c-55e0-4862-a5c4-66145afcff6a
-	datalad-url = git@github.com:courtois-neuromod/retinotopy.git
+	datalad-url = https://github.com/courtois-neuromod/retinotopy.git
 [submodule "containers"]
 	path = containers
 	url = git@github.com:courtois-neuromod/containers.git
 	datalad-id = b02e63c2-62c1-11e9-82b0-52540040489c
-	datalad-url = git@github.com:courtois-neuromod/containers.git
+	datalad-url = https://github.com/repronim/containers.git
 [submodule "sourcedata/templateflow"]
 	path = sourcedata/templateflow
 	url = https://github.com/templateflow/templateflow.git
