--- a/.gitmodules
+++ b/.gitmodules
@@ -10,7 +10,7 @@
 	datalad-url = https://github.com/courtois-neuromod/retinotopy.git
 [submodule "containers"]
 	path = containers
-	url = git@github.com:courtois-neuromod/containers.git
+	url = git@github.com:repronim/containers.git
 	datalad-id = b02e63c2-62c1-11e9-82b0-52540040489c
 	datalad-url = https://github.com/repronim/containers.git
 [submodule "sourcedata/templateflow"]
