--- a/.gitmodules
+++ b/.gitmodules
@@ -2,7 +2,7 @@
 	path = sourcedata/smriprep
 	url = git@github.com:courtois-neuromod/anat.smriprep.git
 	datalad-id = f3ef9683-0a58-4d2b-b4eb-d33d8fc3fd2b
-	datalad-url = https://github.com/courtois-neuromod/containers.git
+	datalad-url = https://github.com/courtois-neuromod/anat.smriprep.git
 [submodule "sourcedata/retinotopy"]
 	path = sourcedata/retinotopy
 	url = git@github.com:courtois-neuromod/retinotopy.git
