--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,1 +1,19 @@
-../../.git/annex/objects/58/6J/MD5E-s714--6df5bb96dfb907d9ddf0d60a96236743.yml/MD5E-s714--6df5bb96dfb907d9ddf0d60a96236743.yml
+name: Test deploy
+on:
+  push:
+    branches: [ main, git-annex, tests]
+  pull_request:
+    branches: [ main ]
+  workflow_dispatch:
+jobs:
+  deploy_linux:
+    uses: courtois-neuromod/actions-datasets/.github/workflows/deploy.yml@main
+    with:
+      name: CNeuromod Bot
+      email: courtois.neuromod@gmail.com
+      public_siblings: "conp-ria-storage-http"
+    secrets:
+      ssh_key: ${{ github.event.repository.private && secrets.CNEUROMOD_BOT_SSH_KEY || secrets.CNEUROMOD_USER_BOT_SSH_KEY }}
+      s3_access_key: ${{ secrets.CNEUROMOD_BOT_S3_ACCESS_KEY }}
+      s3_secret_key: ${{ secrets.CNEUROMOD_BOT_S3_SECRET_KEY }}
+      git_token: ${{ github.event.repository.private && secrets.CNEUROMOD_BOT_TOKEN || '' }}
