--- a/.gitmodules
+++ b/.gitmodules
@@ -1,20 +1,21 @@
 [submodule "sourcedata/smriprep"]
 	path = sourcedata/smriprep
-	url = /project/rrg-pbellec/ria-beluga/alias/cneuromod.anat.smriprep
+	url = git@github.com/courtois-neuromod/anat.smriprep
 	datalad-id = f3ef9683-0a58-4d2b-b4eb-d33d8fc3fd2b
-	datalad-url = "ria+file:///project/rrg-pbellec/ria-beluga#~cneuromod.anat.smriprep"
+	datalad-url = https://github.com/courtois-neuromod/anat.smriprep
 [submodule "sourcedata/retinotopy"]
 	path = sourcedata/retinotopy
-	url = /project/rrg-pbellec/ria-beluga/alias/cneuromod_raw/retinotopy
+	url = git@github.com/courtois-neuromod/retinotopy
 	datalad-id = df96e39c-55e0-4862-a5c4-66145afcff6a
-	datalad-url = "ria+file:///project/rrg-pbellec/ria-beluga#~cneuromod_raw/retinotopy"
+	datalad-url = https://github.com/courtois-neuromod/retinotopy
 [submodule "sourcedata/templateflow"]
 	path = sourcedata/templateflow
-	url = /project/rrg-pbellec/ria-beluga/alias/templateflow
+	url = https://github.com/templateflow/templateflow
 	datalad-id = c79c47b6-d0fb-11e8-aa11-64006a8a730f
-	datalad-url = "ria+file:///project/rrg-pbellec/ria-beluga#~templateflow"
+	datalad-url = https://github.com/templateflow/templateflow
 [submodule "containers"]
 	path = containers
-	url = /project/rrg-pbellec/ria-beluga/alias/repronim/containers/
+	url = https://github.com/repronim/containers
 	datalad-id = b02e63c2-62c1-11e9-82b0-52540040489c
-	datalad-url = "ria+file:///project/rrg-pbellec/ria-beluga#~repronim/containers"
+	datalad-url = https://github.com/repronim/containers
+
