fix annexed workflows

--- a/.gitattributes
+++ b/.gitattributes
@@ -14,3 +14,4 @@
 *.tgz annex.largefiles=anything
 *.sh annex.largefiles=nothing
 *.yml annex.largefiles=nothing
+.github/** annex.largefiles=nothing
